--- a/.env.development
+++ b/.env.development
@@ -1,7 +1,7 @@
 REACT_APP_FIREBASE_KEY=AIzaSyBYxqLwRtkmfWIgaSbX04WWaNj3eLlJHyk
 
 DOCKER_BUILD='sudo docker build -t meetapp .'
-DOCKER_RUN='sudo docker run --network host -d -p 80:8080 --name MeetApp meetapp'
+DOCKER_RUN='sudo docker run -d -p 80:8080 --name MeetApp meetapp'
 DOCKER_LOGS='sudo docker logs MeetApp'
 
 SERVER_IP='192.144.14.101'
