--- a/client/src/app/config.json
+++ b/client/src/app/config.json
@@ -1,5 +1,5 @@
 {
-    "apiEndpoint": "http://192.144.14.101/api/",
+    "apiEndpoint": "http://localhost:8080/api/",
     "isFirebase": false,
     "firebaseEndpoint": "https://meetapp-firebase-default-rtdb.europe-west1.firebasedatabase.app/"
 }
